# aegis-ai

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
docs/: product_scope.md
experiments/: baseline_classifier_v1.md  dataset_selection_v1.md  embedding_generation_v1.md  evaluation_v1.md  inference_pipeline_v1.md  pipeline_extraction_v1.md  real_world_validation_v1.md  training_pipeline_v1.md  yamnet_exploration_v1.md
notebooks/: 01_dataset_exploration.ipynb  02_audio_representation.ipynb  03_yamnet_exploration.ipynb  04_embedding_dataset.ipynb  05_baseline_classifier.ipynb  06_model_evaluation.ipynb  07_real_world_validation.ipynb  08_pipeline_test.ipynb  09_training_pipeline.ipynb  10_inference_pipeline.ipynb
src/: container.py  main.py
src/cli/: app.py  predict.py  train.py
src/config/: __init__.py  settings.py
src/dataset/: dataset.py
src/embeddings/: __init__.py  extract.py
src/entities/: __init__.py  metrics.py  prediction.py  training.py
src/evaluation/: evaluator.py
src/exceptions/: __init__.py  base.py  dataset.py  embedding.py  model.py  prediction.py  training.py
src/inference/: __init__.py  predict.py
src/logging/: logger.py
src/models/: __init__.py  repository.py
src/training/: __init__.py  train.py
tests/: conftest.py
tests/dataset/: test_dataset.py
tests/e2e/: test_predict_cli.py  test_train_cli.py
tests/embeddings/: test_extractor.py
tests/inference/: test_predictor.py
tests/integration/: test_container.py  test_prediction_pipeline.py  test_repository.py  test_training_pipeline.py
tests/models/: test_repository.py
tests/training/: test_trainer.py
tests/unit/dataset/: test_dataset.py
tests/unit/embeddings/: test_extractor.py
tests/unit/evaluation/: test_evaluator.py
tests/unit/inference/: test_predictor.py
tests/unit/models/: test_repository.py
tests/unit/training/: test_trainer.py
