[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis_ai"
version = "0.1.0"
dependencies = [
    "numpy",
    "scikit-learn"
]

[project.scripts]
aegis = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
]


[tool.mypy]
python_version = "3.12"

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

strict_optional = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true

ignore_missing_imports = true

pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = [
    "test_*.py",
]

python_functions = [
    "test_*",
]

addopts = "-ra"


[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false