[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis_ai"
version = "0.1.0"
description = "Production-grade offline environmental sound classification system."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "joblib",
    "librosa",
    "loguru",
    "numpy",
    "pydantic",
    "pydantic-settings",
    "scikit-learn",
    "soundfile",
    "setuptools",
    "tensorflow",
    "tensorflow-hub",
    "typer",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[project.scripts]
aegis = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]

ignore = []

# ---------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

strict_optional = true
no_implicit_optional = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

ignore_missing_imports = true

pretty = true
show_error_codes = true

# ---------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = [
    "test_*.py",
]

python_functions = [
    "test_*",
]

addopts = [
    "-ra",
    "--cov=src",
    "--cov-report=term-missing",
]

# ---------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
precision = 2